# kafka-client-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  config.ron
resources/: sample_string.txt
src/: lib.rs  main.rs  utils.rs
src/models/: conf.rs  mod.rs  supplied_schema.rs
src/sampling/: base_sampling.rs  mod.rs  simple_payload.rs
src/strategy/: base.rs  mod.rs  throughput.rs
