[package]
name    = "kafka-client-rs"
version = "1.0.0"
authors = ["Nhat Nguyen"]
edition = "2021"
build   = "build.rs"

[dependencies]
futures = "0.3.25"
tokio   = { version = "1.23.0", features = ["macros"] }
clap    = { version = "4.0.29", features = ["cargo"] }
schema_registry_converter = { version = "3.1.0", features = ["avro", "blocking"] }
rdkafka = {version = "0.29.0", features = ["ssl", "sasl", "zstd", "libz-static"]}
serde = "1.0.151"
config = "0.13.3"
ron = "0.8.0"
chrono = "0.4.23"
rand = "0.8.5"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "main"
path = "src/main.rs"
